Put the verified profiles last when deduping so they are never deleted in favor of a non verified profile.

Also added code so that verified profiles don't merge with other verified profiles.

When an unverified profiles is compared with a similar verified profile during dedupe, the verified profile is not changed and the unverified profile is discarded.

BUG=620522
TEST=PersonalDataManagerTest

Review-Url: https://codereview.chromium.org/2075503002
Cr-Commit-Position: refs/heads/master@{#400459}

Former-commit-id: 80c06469b872723c27bf453b3f6ee8b06f747b27